   * Fixed: Binding a temporary in the network code, possibly causing
     crashing.
   * Fixed bug #19469: Missing scenario hash results in Remote scenario always
     added to game description
   * Fixed bug #19322: controller=null hides a side in the status table
   * Fixed bug #19681: cache is never valid tweaked the number to string
     conversion of config_attribute

Version 1.10.2:
 * Campaigns:
   * Legend of Wesmere:
     * Fix bug #19577: some terrain was not snow covered
   * Liberty:
     * Fixed unknown unit type errors in 04_Unlawful_Orders
   * Tutorial:
     * Fixed bug #19367: Make a message gender specific
   * Under the Burning Suns:
     * Fixed bug #19519: UtBS doubled Black Hand dialog
     * Fixed appearance of flood on wooden boards
 * Language and i18n:
   * Fixed two untranslatable strings in the "new" MP lobby
   * Fixed an untranslatable string in the Multiplayer Commands help topic
   * Updated translations: British English, Chinese (Simplified), Estonian,
     Finnish, French, Galician, German, Hungarian, Italian, Korean, Latin,
     Old English, Polish, Portuguese (Brazil), Russian, Serbian, Slovak,
     Spanish
 * Multiplayer:
   * Ignore Pango markup in map descriptions (bug #19210)
   * Changes to the time of day schedules of Fallenstar Lake and Silverhead
     Crossing
 * User interface:
   * Fixed provided saved game filenames being ignored when requesting to
     save a MP game due to a network or OOS error (bug #19562)
 * Whiteboard:
   * Fixed bug #19581: Leader can still move after a planned recall
   * Shortened all context menu items
 * WML engine:
   * Fixed bug #19498: [modify_unit] duplicating units if x,y changed
 * Miscellaneous and bug fixes:
   * Made the Wolf raise its head if and only if it is submerged
   * Fixed bug #19505: broken stone bridge transitions
   * Backported: The Pandora scaling speedup patches

Version 1.10.1:
 * Add-ons server: