@@ -37,6 +37,7 @@ Version 1.10.2+svn:
    * Fixed bug #19322: controller=null hides a side in the status table
    * Fixed bug #19681: cache is never valid tweaked the number to string
      conversion of config_attribute
+   * Fixed bug #16544: Fail to read `empty' cache files.
 
 Version 1.10.2:
  * Campaigns:
